2006-02-02  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by Darin.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6881
          Block with position:absolute bottom:0 doesn't always move when height
          of containing block changes (affects Safari RSS)

        * fast/block/positioning/height-change-expected.checksum: Added.
        * fast/block/positioning/height-change-expected.png: Added.
        * fast/block/positioning/height-change-expected.txt: Added.
        * fast/block/positioning/height-change.html: Added.

2006-02-01  Darin Adler  <darin@apple.com>

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=7018
          REGRESSION: clearTimeout no longer works

        * fast/dom/Window/clear-timeout.html: Added.
        * fast/dom/Window/clear-timeout-expected.txt: Added.

2006-01-31  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

        - test case for REGRESSION: assertion failure mousing over DHTML menus at www.worldofwarcraft.com
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6931

        * fast/dynamic/layer-hit-test-crash-expected.checksum: Added.
        * fast/dynamic/layer-hit-test-crash-expected.png: Added.
        * fast/dynamic/layer-hit-test-crash-expected.txt: Added.
        * fast/dynamic/layer-hit-test-crash.html: Added.

2006-01-31  Adele Peterson  <adele@apple.com>

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6862
        Input's value doesn't get updated after typing in new text field

        * fast/forms/input-changing-value-expected.txt: Added.
        * fast/forms/input-changing-value.html: Added.

2006-01-31  Timothy Hatcher  <timothy@apple.com>

        Adding test cases for:
        http://bugzilla.opendarwin.org/show_bug.cgi?id=4959
        Bug 4959: inline style not terminated properly after <form>

        Updated older tests/results to work with the patch.
        Some of the tests had an open <span> with no close.
